# tentyl-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/: tentyl_mcp.py
